@@ -1988,6 +1988,12 @@ packRegsForAssign (iCode * ic, eBBlock * ebp)
 	  break;
 	}
 #endif
+      /* Don't move an assignment out of a critical block */
+      if (dic->op == CRITICAL)
+	{
+	  dic = NULL;
+	  break;
+	}
 
       if (SKIP_IC2 (dic))
 	continue;
